<resources>
    <string name="mozilla" translatable="false">Mozilla</string>
    <string name="firefox" translatable="false">Firefox</string>
    <string name="mpl" translatable="false">Mozilla Public License</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_ok">OK</string>
    <string name="urlbar_hint">Search or enter address</string>
    <string name="awesomebar_open_copied_link">Open Copied Link</string>
    <string name="awesomebar_switch_to_tab">Switch to Tab</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>
    <string name="menu_give_feedback">Give feedback</string>
    <string name="menu_share_with_friends">Share with friends</string>
    <string name="share_dialog_title">Share via</string>
    <string name="find_in_page_input">Find in page</string>
    <string name="find_in_page_result">%1$d/%2$d</string>
    <string name="accessibility_find_in_page_result">%1$d out of %2$d</string>
    <string name="accessibility_find_next_result">Find next result</string>
    <string name="accessibility_find_previous_result">Find previous result</string>
    <string name="accessibility_dismiss_find_in_page">Dismiss find in page</string>
    <string name="text_selection_search_action">Search in Firefox Lite</string>
    <string name="about_content" translatable="false"><![CDATA[
<p>%1$s<br/>
<a href="%2$s">%3$s</a></p><br/><br/>
<a href="%4$s">%5$s</a><br/><br/>
<a href="%6$s">%7$s</a><br/><br/>
<a href="%8$s">%9$s</a><br/><br/>
<a href="%10$s">%11$s</a><br/><br/>
    ]]></string>
    <string name="about_content_body">%1$s is a fast and lightweight browser produced by %2$s. Our mission is to foster a healthy, open internet.</string>
    <string name="about_link_learn_more">Learn more</string>
    <string name="about_link_support">Support</string>
    <string name="about_link_your_rights">Your Rights / Licenses</string>
    <string name="about_link_privacy">Privacy Notice</string>
    <string name="life_feed">Life Feed</string>
    <string name="about_link_life_feed">Learn more about %1$s</string>
    <string name="preference_search_engine_default">Default search engine</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_systemdefault">System default</string>
    <string name="preference_dialog_title_search_engine">Default search engine</string>
    <string name="preference_dialog_title_news_source">News source</string>
    <string name="preference_data_saving_block_images">Block images</string>
    <string name="preference_privacy_storage_clear_browsing_data">Clear browsing data</string>
    <string name="preference_privacy_storage_save_downloads_to">Save downloads to </string>
    <string name="preference_default_browser">Set as default browser</string>
    <string name="preference_default_browser_is_setting">Changing settings…</string>
    <string name="preference_turbo_mode">Turbo mode</string>
    <string name="preference_mozilla_telemetry">Send usage data</string>
    <string name="preference_mozilla_telemetry_summary">%2$s strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="preference_learn_more">Learn more</string>
    <string name="preference_about">About</string>
    <string name="preference_night_mode_brightness">Night mode brightness</string>
    <string name="night_mode_on_boarding_message">Long press to adjust brightness</string>
    <string name="content_description_clear_input">Clear input</string>
    <string name="content_description_dismiss_input">Dismiss</string>
    <string name="content_description_lock">Secure connection</string>
    <string name="accessibility_announcement_loading">Loading</string>
    <string name="accessibility_announcement_loading_finished">Website loaded</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_forward">Navigate forward</string>
    <string name="content_description_reload">Reload website</string>
    <string name="content_description_back">Navigate back</string>
    <string name="content_description_stop">Stop loading website</string>
    <string name="content_description_customtab_exit">Return to previous app</string>
    <string name="content_description_blocking_switch">Block trackers</string>
    <string name="external_app_prompt_no_app_title">Find an app that can open link</string>
    <string name="external_app_prompt_no_app">None of the apps on your device are able to open this link. You can leave %1$s to search %2$s for an app that can.</string>
    <string name="error_page_message" translatable="false"><![CDATA[
      <ul>
        <li>%1$s</li>
        <li>%2$s</li>
      </ul>
    ]]></string>
    <string name="error_page_title">Webpage not available</string>
    <string name="error_page_recover_a">Make sure you are connected to the internet</string>
    <string name="error_page_recover_b">Check the address</string>
    <string name="error_page_button">TRY AGAIN</string>
    <string name="error_page_title_unsupported_scheme">The address wasn’t understood</string>
    <string name="error_page_content_text_unsupported_scheme">You might need to install other software to open this address.</string>
    <string name="contextmenu_link_share">Share link</string>
    <string name="contextmenu_link_copy">Copy link address</string>
    <string name="contextmenu_image_share">Share image</string>
    <string name="contextmenu_image_copy">Copy image address</string>
    <string name="contextmenu_image_save">Save image</string>
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>
    <string name="contextmenu_open_image_in_new_tab">Open image in new tab</string>
    <string name="first_run_page1_title" translatable="false">Thanks for choosing %1$s</string>
    <string name="first_run_page1_text" translatable="false">A browser made by %1$s, the non-profit committed to a free and open web.</string>
    <string name="first_run_page2_title" translatable="false">Browse faster than ever</string>
    <string name="first_run_page2_text" translatable="false">Use turbo mode to block tracking ads so you can browse at blazing speeds. If sites seem broken, just tap off the turbo mode switch in the menu.</string>
    <string name="first_run_page3_title" translatable="false">Save data = Save money</string>
    <string name="first_run_page3_text" translatable="false">Save on data costs by blocking tracking ads. Save even more when you enable image blocking.</string>
    <string name="first_run_page4_title" translatable="false">Screenshot the whole page</string>
    <string name="first_run_page4_text" translatable="false">Take screenshot of an entire page scroll. Read it offline without using data or tap it to revisit the web page.</string>
    <string name="first_run_page5_title" translatable="false">Next-level privacy</string>
    <string name="first_run_page5_text" translatable="false">Browse without a trace, and block a wide range of common web trackers by default. Ensure the security of your confidential data.</string>
    <string name="first_run_page6_text" translatable="false">Just one flip, keep yourself updated with the “%1$s” - a variety of contents from the most popular topics to the hottest deals. %2$s</string>
    <string name="first_run_page7_title" translatable="false">Prevent from being tracked</string>
    <string name="first_run_page7_text" translatable="false">Now you can check how many trackers are blocked in private mode.</string>
    <string name="first_run_upgrade_page_title" translatable="false">We heard your feedback!</string>
    <string name="new_name_upgrade_page_title">We have a new look!</string>
    <string name="new_name_upgrade_page_text">With the evolved product, we bring you a newly refreshed %1$s, with new name and new logo.</string>
    <string name="first_run_upgrade_page_text1" translatable="false">1. Multitask by opening %s at the same time!</string>
    <string name="first_run_upgrade_page_text1_highlight" translatable="false">multiple tabs</string>
    <string name="first_run_upgrade_page_text2" translatable="false">2. Access your favorite sites quickly by %s</string>
    <string name="first_run_upgrade_page_text2_highlight" translatable="false">adding them to the home screen!</string>
    <string name="firstrun_close_button">OK, got it!</string>
    <string name="firstrun_skip_button" translatable="false">Skip</string>
    <string name="firstrun_next_button" translatable="false">Next</string>
    <string name="firstrun_fxlite_2.5_title_1">Hello!</string>
    <string name="firstrun_fxlite_2.5_title_2">What brings you to %1$s?</string>
    <string name="firstrun_fxlite_2_5_title_A">Hello!</string>
    <string name="firstrun_fxlite_2_5_title_B">What brings you to %1$s?</string>
    <string name="content_theme_1">Browse the Web</string>
    <string name="content_theme_2">Find Good Deals</string>
    <string name="content_theme_3">Play Games and Videos</string>
    <string name="content_theme_4">Read Trending News</string>
    <string name="button_done">Done</string>
    <string name="onboarding_transition_title" translatable="false">Optimizing experience for you…</string>
    <string name="onboarding_transition_feature_1" translatable="false">Applying finishing touches to your Home</string>
    <string name="onboarding_transition_feature_2" translatable="false">Activating Turbo Mode</string>
    <string name="onboarding_transition_feature_3" translatable="false">Setting tracker shields to maximum power</string>
    <string name="label_menu_bookmark">Bookmarks</string>
    <string name="label_menu_download">Downloads</string>
    <string name="label_menu_find_in_page">Find in page</string>
    <string name="label_menu_clear_cache">Clear cache</string>
    <string name="label_menu_history">History</string>
    <string name="label_menu_share">Share</string>
    <string name="label_menu_my_shots">Screenshots</string>
    <string name="label_menu_capture_page">Capture page</string>
    <string name="label_menu_turbo_mode">Turbo mode</string>
    <string name="label_menu_night_mode">Night mode</string>
    <string name="label_menu_block_ads">Block Ads</string>
    <string name="label_menu_block_image">Block images</string>
    <string name="label_menu_settings">Settings</string>
    <string name="label_menu_exit">Exit</string>
    <string name="label_menu_add_to_home_screen">Add to home screen</string>
    <string name="label_menu_content_services">Show Content &amp; Services</string>
    <string name="label_menu_add_top_sites">Add top sites</string>
    <string name="label_menu_themes">Themes</string>
    <string name="theme_settings_title">Choose your theme</string>
    <string name="rate_app_dialog_text_title">Love %1$s?</string>
    <string name="rate_app_dialog_text_content">Thank you for choosing our product. Your feedback is important to us.</string>
    <string name="rate_app_dialog_btn_go_rate">Rate Us</string>
    <string name="rate_app_dialog_btn_feedback">Leave Feedback</string>
    <string name="share_app_dialog_text_title">Share %1$s with friends!</string>
    <string name="share_app_dialog_text_content">- Fast and lightweight\n- Smart Shopping Search\n- Free Games, trending news</string>
    <string name="share_app_dialog_btn_share">Share</string>
    <string name="news_language_dialog_title">Language</string>
    <string name="news_category_title">Interests</string>
   <string name="recommended_news_preference_toggle">Personalized news experience</string>
    <string name="private_tab">Private tab</string>
    <string name="gaming_vertical_hint_title">Fast access to your favourite games</string>
    <string name="gaming_vertical_hint_body">Long press to create a shortcut to your home screen.</string>
</resources>