<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/promotion_02" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/rate_app_dialog_text_title"
        android:textColor="@color/colorMenuLabelDefault"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/rate_app_dialog_text_content"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPromotionDialogDivider" />

    <Button
        android:id="@+id/dialog_rate_app_btn_go_rate"
        style="@style/PromoteDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_app_dialog_btn_go_rate"
        android:textColor="@color/colorAccent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPromotionDialogDivider" />

    <Button
        android:id="@+id/dialog_rate_app_btn_feedback"
        style="@style/PromoteDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_app_dialog_btn_feedback"
        android:textColor="@color/colorPromotionDialogSecBtn" />
</LinearLayout>
