<?xml version="1.0" encoding="utf-8"?>
<org.mozilla.focus.widget.EqualDistributeRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MenuSheetRow"
    android:layout_marginTop="3dp"
    tools:background="#3300FF00">

    <FrameLayout
        android:id="@+id/menu_bookmark"
        style="@style/MenuButtonContainer">

        <LinearLayout style="@style/MenuButtonGroup">

            <View
                style="@style/MenuButtonIcon"
                android:background="@android:color/transparent" />

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_menu_bookmark" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/menu_download"
        style="@style/MenuButtonContainer">

        <LinearLayout style="@style/MenuButtonGroup">

            <View
                style="@style/MenuButtonIcon"
                android:background="@drawable/menu_download" />

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_menu_download" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/menu_history"
        style="@style/MenuButtonContainer">

        <LinearLayout style="@style/MenuButtonGroup">

            <View
                style="@style/MenuButtonIcon"
                android:background="@drawable/menu_history" />

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_menu_history" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/menu_screenshots"
        style="@style/MenuButtonContainer">

        <ImageView
            android:id="@+id/menu_my_shot_unread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="48dp"
            android:paddingTop="7dp"
            android:src="@drawable/ic_menu_screenshots_new" />

        <LinearLayout style="@style/MenuButtonGroup">

            <View
                style="@style/MenuButtonIcon"
                android:background="@drawable/menu_my_shots" />

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_menu_my_shots" />
        </LinearLayout>
    </FrameLayout>
</org.mozilla.focus.widget.EqualDistributeRow>