<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onboarding_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/arrow"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/tooltip_pointer" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arrow">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_recent_played_onboarding_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/gaming_vertical_hint_title"
                android:textColor="@color/paletteLightBlack100"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_recent_played_onboarding_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/gaming_vertical_hint_body"
                android:textColor="@color/paletteLightBlack100"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/next"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_plateform_onboarding_button"
                android:fontFamily="sans-serif-medium"
                android:minHeight="32dp"
                android:text="@string/action_ok"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>